--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "resend": "^6.6.0"
   }
 }
